1. Portfolio Interface: removed returnList() signature